--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -13,13 +13,13 @@
     <input type="text" name="nome" id="nome" required>
 
     <label for="quantidade">Quantidade:</label>
-    <input type="number" name="quantidade" id="quantidade" required>
+    <input type="number" name="quantidade" id="quantidade" step="1" required>
 
     <label for="unidade_medida">Unidade de Medida</label>
     <input type="text" name="unidade_medida" id="unidade_medida">
 
     <label for="lote">Lote:</label>
-    <input type="number" name="lote" id="lote">
+    <input type="number" name="lote" id="lote" step="1">
 
     <label for="estoque_minimo_chuva">Estoque Mínimo (Chuva):</label>
     <input type="number" name="estoque_minimo_chuva" id="estoque_minimo_chuva" required>
