--- a/src/templates/editar_material.html
+++ b/src/templates/editar_material.html
@@ -18,7 +18,7 @@
     <label for="unidade_medida">Unidade De Medida:</label>
     <input type="text" name="unidade_medida" id="unidade_medida" value="{{ material.unidade_medida }}">
 
-    <label for="lote">Lote:</label>
+    <label for="lote">Locação:</label>
     <input type="text" name="lote" id="lote" value="{{ material.lote }}">
 
     <label for="estoque_minimo_chuva">Estoque Mínimo (Chuva):</label>
