--- a/src/templates/editar_movimentacao.html
+++ b/src/templates/editar_movimentacao.html
@@ -135,7 +135,7 @@
     <form id="form-material" class="form-modal">
       <input type="text" name="nome" placeholder="Nome" required>
       <input type="number" name="quantidade" placeholder="Quantidade" required>
-      <input type="number" name="lote" placeholder="Lote">
+      <input type="number" name="lote" placeholder="Locação">
       <input type="number" name="estoque_minimo_chuva" placeholder="Estoque Mínimo (Chuva)" required>
       <input type="number" name="estoque_minimo_seco" placeholder="Estoque Mínimo (Seco)" required>
       <button type="submit" class="btn-salvar">Salvar</button>
