--- a/src/templates/materiais.html
+++ b/src/templates/materiais.html
@@ -22,7 +22,7 @@
         <th>Nome</th>
         <th>Quantidade</th>
         <th>Unidade de medida</th>
-        <th>Lote</th>
+        <th>Locação</th>
         <th>Est. Mín. (Chuva)</th>
         <th>Est. Mín. (Seco)</th>
         <th>Ações</th>
