--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -114,7 +114,7 @@
       <input type="text" name="nome" placeholder="Nome" required>
       <input type="number" name="quantidade" placeholder="Quantidade" step="any" required>
       <input type="text" name="unidade_medida" placeholder="Unidade de Medida">
-      <input type="number" name="lote" placeholder="Lote">
+      <input type="number" name="lote" placeholder="Locação">
       <input type="number" name="estoque_minimo_chuva" placeholder="Estoque Mínimo (Chuva)" step="any" required>
       <input type="number" name="estoque_minimo_seco" placeholder="Estoque Mínimo (Seco)" step="any" required>
       <button type="submit" class="btn-salvar">Salvar</button>
