--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -18,7 +18,7 @@
     <label for="unidade_medida">Unidade de Medida</label>
     <input type="text" name="unidade_medida" id="unidade_medida">
 
-    <label for="lote">Lote:</label>
+    <label for="lote">Locação:</label>
     <input type="number" name="lote" id="lote" step="1">
 
     <label for="estoque_minimo_chuva">Estoque Mínimo (Chuva):</label>
